# chevron

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  flake.nix  lefthook.yml
.beads/: .gitignore  export-state.json  interactions.jsonl  issues.jsonl  metadata.json
.beads/hooks/: pre-commit  pre-push
.githooks/: post-checkout  post-merge  pre-commit  pre-push  prepare-commit-msg
.github/: dependabot.yml
.github/workflows/: ci.yml
benches/: segments.rs
scripts/: bench.sh
src/: capture.rs  color.rs  config.rs  doctor.rs  event.rs  history.rs  host.rs  lib.rs  main.rs  pty.rs  repo_status.rs  shell.rs  subscribe.rs  sysinfo.rs
src/banner/: mod.rs  render.rs
src/configure/: answers.rs  emit.rs  mod.rs  presets.rs  preview.rs  tui.rs  writer.rs
src/daemon/: client.rs  lifecycle.rs  listener.rs  mod.rs  paths.rs  proto.rs  state.rs
src/health/: cache.rs  check.rs  checks.rs  macos.rs  mod.rs  render.rs
src/segments/: aws.rs  character.rs  custom_command.rs  git.rs  hostname.rs  nix_shell.rs  node.rs  path.rs  prompt.rs  registry.rs  reset.rs  status.rs  tmux_title.rs  username.rs  venv.rs
src/segments/snapshots/: chevron__segments__git__tests__snap_segment_dirty_just_modified.snap  chevron__segments__git__tests__snap_segment_no_repo.snap  chevron__segments__path__tests__snap_deep_path_truncated.snap  chevron__segments__path__tests__snap_home_subdir.snap  chevron__segments__path__tests__snap_max_dir_size_truncates.snap  chevron__segments__path__tests__snap_root.snap  chevron__segments__tmux_title__tests__snap_clean_repo.snap  chevron__segments__tmux_title__tests__snap_dirty_repo.snap  chevron__segments__tmux_title__tests__snap_home_no_repo.snap  chevron__segments__tmux_title__tests__snap_non_repo_directory.snap  plx__segments__git__tests__snap_segment_clean_no_stash.snap  plx__segments__git__tests__snap_segment_clean_with_stash.snap  plx__segments__git__tests__snap_segment_detached_head.snap  plx__segments__git__tests__snap_segment_dirty_all_chips.snap  plx__segments__git__tests__snap_segment_rebasing.snap  plx__segments__path__tests__snap_home_dir.snap  plx__segments__path__tests__snap_home_subdir.snap  plx__segments__path__tests__snap_non_home.snap  plx__segments__tmux_title__tests__snap_clean_repo.snap  plx__segments__tmux_title__tests__snap_dirty_repo.snap
src/weather/: args.rs  cache.rs  location.rs  mod.rs  providers.rs
tests/: cli.rs  shell_pty.rs
