[package]
name = "plx"
version = "0.4.0"
edition = "2024"
license = "MIT"
description = "Configurable powerline prompt segments and tmux window titles for zsh, bash, and fish"
repository = "https://github.com/mmichie/plx"
keywords = ["prompt", "powerline", "tmux", "bash", "shell"]
categories = ["command-line-utilities"]

[features]
default = ["banner", "weather"]
banner = ["dep:image"]
weather = ["dep:ureq", "dep:serde_json"]

[dependencies]
git2 = { version = "0.20", default-features = false, features = ["vendored-libgit2"] }
image = { version = "0.25", optional = true, default-features = false, features = ["png"] }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }
toml = "0.8"
ureq = { version = "3", optional = true, default-features = false, features = ["rustls", "json", "gzip"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serial_test = "3"
tempfile = "3"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }

[profile.release]
opt-level = 3
lto = true
strip = true
