[package]
name = "chevron"
version = "0.5.0"
edition = "2024"
license = "MIT"
description = "Configurable powerline prompt segments and tmux window titles for zsh, bash, and fish"
repository = "https://github.com/shiprock/chevron"
keywords = ["prompt", "powerline", "tmux", "bash", "shell"]
categories = ["command-line-utilities"]

[features]
default = ["banner", "weather"]
banner = ["dep:image"]
weather = ["dep:ureq", "dep:serde_json"]

[dependencies]
git2 = { version = "0.20", default-features = false, features = ["vendored-libgit2"] }
image = { version = "0.25", optional = true, default-features = false, features = ["png"] }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }
toml = "0.8"
ureq = { version = "3", optional = true, default-features = false, features = ["rustls", "json", "gzip"] }

[dev-dependencies]
assert_cmd = "2"
criterion = { version = "0.5", default-features = false }
insta = "1"
predicates = "3"
proptest = "1"
serial_test = "3"
tempfile = "3"

[[bench]]
name = "segments"
harness = false

[lints.rust]
# Forbid implicit unsafe inside `unsafe fn` bodies — every unsafe op
# still needs an explicit `unsafe { ... }` block with a SAFETY comment.
unsafe_op_in_unsafe_fn = "deny"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Every `unsafe { ... }` block must carry a `// SAFETY:` comment.
undocumented_unsafe_blocks = "warn"
# Don't allow SAFETY comments on safe code — keeps the safety story honest.
unnecessary_safety_comment = "warn"
# Forbid implicit panic sites in production code. The prompt renders on every
# keystroke; a panic anywhere would drop the user's prompt. All of these are
# allowed inside #[cfg(test)] blocks via the cfg_attr in src/lib.rs so tests
# can still use unwrap/expect freely.
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
dbg_macro = "warn"

[profile.release]
opt-level = 3
lto = true
strip = true
