[package]
name = "chevron"
version = "0.7.0"
edition = "2024"
license = "MIT"
description = "Configurable powerline prompt segments and tmux window titles for zsh, bash, and fish"
repository = "https://github.com/shiprock/chevron"
keywords = ["prompt", "powerline", "tmux", "bash", "shell"]
categories = ["command-line-utilities"]

[features]
default = ["banner", "weather", "vendored-libgit2", "daemon"]
banner = ["dep:image"]
weather = ["dep:ureq", "dep:serde_json"]
# Opt-out: distro packagers (nixpkgs, etc.) build with
# `--no-default-features --features banner,weather` to link the system
# libgit2 instead of the vendored copy.
vendored-libgit2 = ["git2/vendored-libgit2"]
# chevrond: TTL-cached background daemon serving RepoStatus over a Unix
# socket. Without this feature, status_for_cwd always computes inline.
# Pulls in rusqlite (bundled) for command-lifecycle storage (Phase 1 of
# chevron-1yn) and ulid for client-generated event IDs.
daemon = ["dep:notify", "dep:rusqlite", "dep:ulid"]
# chevron host: opt-in PTY compositor (own the prompt zone). Stage 0 is a
# transparent passthrough host (src/host.rs); later stages add a status
# region and live-zone compositing. Off by default so CI / nix build / the
# shipping binary are unaffected. The transparent passthrough + status bar
# use only libc; the Stage 2 grid model pulls in alacritty_terminal (an
# actively-maintained, resize-robust VT model — vt100 stays a dev-dep for
# the test harness only). See the chevron-dw5 epic.
host = ["dep:alacritty_terminal"]

[dependencies]
# Stage 2 grid model for `chevron host` (opt-in via the `host` feature). The
# maintained, vtebench-fast VT model from the Alacritty project; chevron
# drives a Term from the forwarded child stream to know the cursor/grid.
alacritty_terminal = { version = "0.26", optional = true }
git2 = { version = "0.21", default-features = false }
image = { version = "0.25", optional = true, default-features = false, features = ["png"] }
# `chevron configure` wizard. Default-features pulls in the crossterm
# backend, which is what we need for the interactive question flow.
inquire = "0.7"
libc = "0.2"
notify = { version = "8", optional = true }
rusqlite = { version = "0.32", optional = true, features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }
toml = "0.8"
ulid = { version = "1", optional = true }
ureq = { version = "3", optional = true, default-features = false, features = ["rustls", "json", "gzip"] }

[dev-dependencies]
assert_cmd = "2"
criterion = { version = "0.5", default-features = false }
insta = "1"
portable-pty = "0.9.0"
predicates = "3"
proptest = "1"
# Used by tests/cli.rs to read the daemon's commands.db file directly
# and verify that lifecycle events landed (chevron-1yn Phase 1).
rusqlite = { version = "0.32", features = ["bundled"] }
serial_test = "3"
tempfile = "3"
vt100 = "0.16.2"

[[bench]]
name = "segments"
harness = false

[lints.rust]
# Forbid implicit unsafe inside `unsafe fn` bodies — every unsafe op
# still needs an explicit `unsafe { ... }` block with a SAFETY comment.
unsafe_op_in_unsafe_fn = "deny"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Every `unsafe { ... }` block must carry a `// SAFETY:` comment.
undocumented_unsafe_blocks = "warn"
# Don't allow SAFETY comments on safe code — keeps the safety story honest.
unnecessary_safety_comment = "warn"
# Forbid implicit panic sites in production code. The prompt renders on every
# keystroke; a panic anywhere would drop the user's prompt. All of these are
# allowed inside #[cfg(test)] blocks via the cfg_attr in src/lib.rs so tests
# can still use unwrap/expect freely.
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
dbg_macro = "warn"

[profile.release]
opt-level = 3
lto = true
strip = true
